fed-funds/styles.css
@media (max-width: 599px) {
    body {
        margin: 0;
        padding: 0 10%;
        background-color: #f4f4f4;
        color: #333;
        line-height: 1.6;
        font-family:Garamond, Times, serif;
    }

    h1 {
        background-color: #333;
        color: #fff;
        padding: 10px 0;
        text-align: center;
    }

    h2 {
        margin-top: 20px;
        color: #444;
    }

    p {
        margin: 15px 0;
        text-align: justify;
    }

    img {
    display: block;
    width: 100%;
    margin: auto;
    }

    h1, h2, p {
        padding: 0 40px;
    }
}

@media (min-width: 600px) and (max-width: 899px) {
    body {
        margin: 0;
        padding: 0 25%;
        background-color: #f4f4f4;
        color: #333;
        line-height: 1.6;
        font-family:Garamond, Times, serif;
    }

    h1 {
        background-color: #333;
        color: #fff;
        padding: 10px 0;
        text-align: center;
    }

    h2 {
        margin-top: 20px;
        color: #444;
    }

    p {
        margin: 15px 0;
        text-align: justify;
    }

    img {
    display: block;
    width: 100%;
    margin: auto;
    }

    h1, h2, p {
        padding: 0 40px;
    }
}
 
@media (min-width: 900px) {
    body {
        margin: 0;
        padding: 0 25%;
        background-color: #f4f4f4;
        color: #333;
        line-height: 1.6;
        font-family:Garamond, Times, serif;
    }

    h1 {
        background-color: #333;
        color: #fff;
        padding: 10px 0;
        text-align: center;
    }

    h2 {
        margin-top: 20px;
        color: #444;
    }

    p {
        margin: 15px 0;
        text-align: justify;
    }

    img {
    display: block;
    width: 100%;
    margin: auto;
    }

    h1, h2, p {
        padding: 0 40px;
    }
}

